--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactjs",
-  "homepage": "https://Mubeen35951.github.io/reactjs/src/components",
+  "homepage": "https://Mubeen35951.github.io/reactjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
